# PHP-CPP

./: .gitignore  CMakeLists.txt  phpcpp.h
cmake/: FindPHP5.cmake
include/: stream.h  value.h
zend/: includes.h  stream.cpp  value.cpp
